# gifdex-wip

./: Cargo.toml
.cargo/: config.toml
.sqlx/: query-164b2f43cd07929759bee04f8bdcfd28c838a6d61a1e030ddf25c2666aa30828.json  query-246e3b3dcc8b4030b2a747a8ef3cc41b52654344e1036fe28997ea6b6613f33f.json  query-27399b96ca763b3233d608d98df9e915dfb4c1e74dbbbcd60c3c04b67716bf56.json  query-41aeb6e156c0c8e4b35bafb61c157e7d8e51be2584bc43345199c8a145a5851b.json  query-54c0d2fe2996bae66506f0ae42dc89ffbdc851de7ceb1400b50c5a25b9099021.json  query-5aaebf4bdb8cdcc67816b578058b250033ccab67fd53642f0025ab3dfd0eba4b.json  query-79802453af72c476d7e63afa02141fdceffb0e6ffd701f1e331869c72e8f8151.json  query-7c179d062e37e288ef2c91c44e52dd4ed7a5b97a6ffcce922729705d920b0967.json  query-81985ad8574be04d78c1250a7b8d9b8a51d72181c7a289a811f117ecb7a6235b.json  query-88864e1a55670884141be20aa6acef8ef52337c7d638480c14e13f90d3bbf52c.json  query-9164f0b5f25e5c94c90489ce85c8932082748a469adc87e86279ca69ab71dc3b.json  query-9c14d3afe2904463538c6ae763f6ba43be163d82e3a8ccb4ef83d10c8a8b9a90.json  query-a22b7df6b83df7d4c4b9e7ccf8dd45298894d7eca856cf414b268c8136aac005.json  query-ab07f35f0932edba1880edf7ea696dd664a568c2a2d0e3794abe5870e14fefea.json  query-b89838ff6f2589094d7bdb9fa8d5a03f5435b5d681f23419d4e48dda6b901e5c.json  query-c0d4e1f86dbea9b1b22ca0b77a9eb191bc9bda9c004a43e981ccd451458b2302.json  query-c3aaf17bcbfeeb3feb15e70d59952201576f7e01e24b2656d7253b274b5cf38d.json  query-dec0d8037025ed73298a0e39458570f0526de83c4a1a986affc8e6279ba2d102.json  (+2 more)
crates/lesgif-appview/: Cargo.toml
frontend/: .env.example  (+6 more)
(+157 files in other folders)
